--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -458,6 +458,10 @@ table {
     .material-icons {
         margin-right: 5px;
     }
+    
+    .title_groupe {
+        margin: 0 0 0 10px;
+    }
 }
 .cp_section_button {
     margin-bottom: 10px;
