--- a/symfony_fw/templates/render/control_panel/microservice_api.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api.html.twig
@@ -1,23 +1,25 @@
-{% for key, value in response.values.microserviceApiRows %}
-    <div class="mdc-card">
-        <div class="mdc_card_header">
-            <div class="mdc-card__media mdc-card__media--square">
-                <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/api.png")}}" alt="api.png"/>
+{% if response.values is defined %}
+    {% for key, value in response.values.microserviceApiRows %}
+        <div class="mdc-card">
+            <div class="mdc_card_header">
+                <div class="mdc-card__media mdc-card__media--square">
+                    <img src="{{asset("images/templates/" ~ settingRow['template'] ~ "/api.png")}}" alt="api.png"/>
+                </div>
+                <div class="mdc_card_description">
+                    <h1 class="mdc-typography--headline6"><span>{{value['name']}}</span></h1>
+                    <p>{{value['description']}}</p>
+                </div>
             </div>
-            <div class="mdc_card_description">
-                <h1 class="mdc-typography--headline6"><span>{{value['name']}}</span></h1>
-                <p>{{value['description']}}</p>
+            <hr class="mdc-list-divider">
+            <div class="mdc-card__actions">
+                <div class="mdc-card__action-buttons">
+                    <a class="mdc-button mdc-button--dense mdc-card__action mdc-card__action--button"
+                       href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_microservice_api_profile_" ~ (key + 1)})}}" type="button">{% trans %}microserviceApi_1{% endtrans %}</a>
+                </div>
+                <div class="mdc-card__action-icons">
+                    <p>{% if value['active'] == true %}{% trans %}microserviceApi_2{% endtrans %}{% else %}{% trans %}microserviceApi_3{% endtrans %}{% endif%}</p>
+                </div>
             </div>
         </div>
-        <hr class="mdc-list-divider">
-        <div class="mdc-card__actions">
-            <div class="mdc-card__action-buttons">
-                <a class="mdc-button mdc-button--dense mdc-card__action mdc-card__action--button"
-                   href="{{path("control_panel", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': "cp_microservice_api_profile_" ~ (key + 1)})}}" type="button">{% trans %}microserviceApi_1{% endtrans %}</a>
-            </div>
-            <div class="mdc-card__action-icons">
-                <p>{% if value['active'] == true %}{% trans %}microserviceApi_2{% endtrans %}{% else %}{% trans %}microserviceApi_3{% endtrans %}{% endif%}</p>
-            </div>
-        </div>
-    </div>
-{% endfor %}
+    {% endfor %}
+{% endif %}
