--- a/symfony_fw/templates/render/control_panel/microservice_deploy.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy.html.twig
@@ -12,4 +12,5 @@
         {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
     </form>
     <div id="cp_microservice_deploy_render_result"></div>
+    <div id="cp_microservice_deploy_ssh_connection_result"></div>
 </fieldset>
