--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -188,6 +188,10 @@ table {
         }
     }
 }
+.table_loading {
+    visibility: hidden;
+    font-size: 35px;
+}
 
 .mdc-top-app-bar {
     z-index: 1000;
