--- a/symfony_fw/templates/include/search.html.twig
+++ b/symfony_fw/templates/include/search.html.twig
@@ -2,6 +2,7 @@
     
     {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
     
+    <i class="material-icons rotate_loop table_loading">autorenew</i>
     <div class="list_result">
         {{response.values.listHtml|raw}}
     </div>
