--- a/symfony_fw/templates/render/control_panel/module_select.html.twig
+++ b/symfony_fw/templates/render/control_panel/module_select.html.twig
@@ -5,7 +5,8 @@
         <div id="cp_module_select_result_desktop">
             
             {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
-
+            
+            <i class="material-icons rotate_loop table_loading">autorenew</i>
             <table>
                 <thead>
                     <tr>
