--- a/symfony_fw/templates/render/control_panel/page_select.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_select.html.twig
@@ -6,6 +6,7 @@
             
             {{-include("@templateRoot/include/table_and_pagination.html.twig")-}}
             
+            <i class="material-icons rotate_loop table_loading">autorenew</i>
             <table>
                 <thead>
                     <tr>
