--- a/symfony_fw/templates/microservice/api/test/index.html.twig
+++ b/symfony_fw/templates/microservice/api/test/index.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Test api</title>
+        <title>ApiTest</title>
         <!-- Meta -->
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
@@ -13,7 +13,7 @@
         <link href="https://ls1.reinventsoftware.org/projects/uebusaito/symfony_fw/public/microservice/api/test/api.css" rel="stylesheet"/>
     </head>
     <body>
-        <p class="test_text">Test api.</p>
+        <p class="test_text">Api test page.</p>
         <script src="https://ls1.reinventsoftware.org/projects/uebusaito/symfony_fw/public/microservice/api/test/jquery_3.3.1.min.js"></script>
         <script src="https://ls1.reinventsoftware.org/projects/uebusaito/symfony_fw/public/microservice/api/test/Api.js"></script>
     </body>
