--- a/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api_profile.html.twig
@@ -14,4 +14,6 @@
             {{form_widget(form.submit, {'dense': "", 'raised': ""})}}
         </form>
     </fieldset>
+    {{-render(controller("App\\Controller\\Microservice\\Api\\Test\\ApiTestController::createAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
+    {{-render(controller("App\\Controller\\Microservice\\Api\\Test\\ApiTestController::selectAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
 {% endif %}
