--- a/symfony_fw/public/scss/system/basic.scss
+++ b/symfony_fw/public/scss/system/basic.scss
@@ -510,6 +510,11 @@ table {
     cursor: pointer;
 }
 
+.apiBasic_log {
+    height: 300px;
+    overflow-y: scroll;
+}
+
 #body_progress {
     display: block;
     height: 100%;
