--- a/symfony_fw/templates/microservice/api/basic/create.html.twig
+++ b/symfony_fw/templates/microservice/api/basic/create.html.twig
@@ -1,14 +1,15 @@
 <fieldset class="accordion_container">
-    <legend>{% trans %}apiTestCreate_1{% endtrans %}</legend>
-    <p>{% trans %}apiTestCreate_2{% endtrans %}</p>
+    <legend>{% trans %}apiBasicCreate_1{% endtrans %}</legend>
+    <p>{% trans %}apiBasicCreate_2{% endtrans %}</p>
     <button class="mdc-button mdc-button--dense mdc-button--raised button_accordion" type="button">{% trans %}index_9{% endtrans %}</button>
     <div class="accordion">
         {% form_theme form "@templateRoot/layout/layout_form_materialDesign.html.twig" %}
         
-        <form id="form_cp_apiTest_create" action="{{path("cp_apiTest_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
+        <form id="form_cp_apiBasic_create" action="{{path("cp_apiBasic_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
             {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-            {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
             {{form_row(form.token, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
+            {{form_row(form.ip, {'dense': "", 'styleType': "outlinedTrailing"})}}
+            {{form_row(form.urlCallback, {'dense': "", 'styleType': "outlinedTrailing"})}}
             {{form_row(form.active)}}
 
             {{form_widget(form._token)}}
